@@ -1,17 +1,13 @@
 package io.pulseautomate.map.cli.run;
 
+import com.google.protobuf.util.JsonFormat;
 import io.pulseautomate.map.ha.client.HAHttpClient;
 import io.pulseautomate.map.ha.config.HAConfig;
-import io.pulseautomate.map.ha.model.HAService;
-import io.pulseautomate.map.ha.model.HAServiceField;
-import io.pulseautomate.map.ha.model.HASnapshot;
-import io.pulseautomate.map.ha.model.HAState;
 import io.pulseautomate.map.manifest.builder.ManifestBuilder;
 import io.pulseautomate.map.manifest.lock.LockBuilder;
-import io.pulseautomate.map.manifest.lock.LockFile;
-import io.pulseautomate.map.manifest.lock.LockJson;
+import io.pulseautomate.map.manifest.lock.LockPb;
 import io.pulseautomate.map.manifest.serde.ManifestCanonicalizer;
-import io.pulseautomate.map.manifest.serde.ManifestJson;
+import io.pulseautomate.map.manifest.serde.ManifestPb;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
@@ -37,8 +33,13 @@ public final class DiscoverRunner {
     SnapshotProvider provider =
         new SnapshotProvider() {
           @Override
-          public HASnapshot fetch() throws Exception {
-            return new HASnapshot(List.of(), List.of());
+          public List<Map<String, Object>> fetchStates() throws Exception {
+            return Collections.emptyList();
+          }
+
+          @Override
+          public List<Map<String, Object>> fetchServices() throws Exception {
+            return Collections.emptyList();
           }
 
           @Override
@@ -58,7 +59,9 @@ public final class DiscoverRunner {
   public record Result(Path manifestPath, Path lockPath, int entities, int services) {}
 
   public interface SnapshotProvider {
-    HASnapshot fetch() throws Exception;
+    List<Map<String, Object>> fetchStates() throws Exception;
+
+    List<Map<String, Object>> fetchServices() throws Exception;
 
     String haVersion() throws Exception;
   }
@@ -71,32 +74,45 @@ public final class DiscoverRunner {
     this.builder = builder;
   }
 
-  public Result run(Path outDir) throws Exception {
+  public Result run(Path outDir, boolean jsonOutput) throws Exception {
     Files.createDirectories(outDir);
+    cleanupOldFiles(outDir);
 
-    var snap = provider.fetch();
-    var version = provider.haVersion();
+    var states = provider.fetchStates();
+    var services = provider.fetchServices();
+    var haVersion = provider.haVersion();
 
-    var manifest = builder.build(version, snap);
+    var manifest = builder.build(haVersion, states, services);
     var canon = ManifestCanonicalizer.canonicalize(manifest);
+    var lock = LockBuilder.build(canon, null, Instant.now());
 
-    var manifestPath = outDir.resolve("manifest.json");
-    ManifestJson.writePretty(manifestPath, canon);
+    var manifestExt = jsonOutput ? ".json" : ".pb";
+    var lockExt = jsonOutput ? ".json" : ".pb";
 
-    var lockPath = outDir.resolve("map.lock.json");
-    LockFile prev = null;
-    if (Files.exists(lockPath))
-      try {
-        prev = LockJson.read(lockPath);
-      } catch (IOException ignore) {
-      }
+    var manifestPath = outDir.resolve("manifest" + manifestExt);
+    var lockPath = outDir.resolve("map.lock" + lockExt);
 
-    var lock = LockBuilder.build(canon, prev, Instant.now());
-    LockJson.writePretty(lockPath, lock);
+    if (jsonOutput) {
+      var printer =
+          JsonFormat.printer()
+              .preservingProtoFieldNames()
+              .sortingMapKeys()
+              .alwaysPrintFieldsWithNoPresence();
+      Files.writeString(manifestPath, printer.print(canon));
+      Files.writeString(lockPath, printer.print(lock));
+    } else {
+      ManifestPb.write(manifestPath, canon);
+      LockPb.write(lockPath, lock);
+    }
 
-    var entities = canon.entities() == null ? 0 : canon.entities().size();
-    var services = canon.services() == null ? 0 : canon.services().size();
-    return new Result(manifestPath, lockPath, entities, services);
+    return new Result(manifestPath, lockPath, canon.getEntitiesCount(), canon.getServicesCount());
+  }
+
+  private void cleanupOldFiles(Path outDir) throws IOException {
+    Files.deleteIfExists(outDir.resolve("manifest.pb"));
+    Files.deleteIfExists(outDir.resolve("manifest.json"));
+    Files.deleteIfExists(outDir.resolve("map.lock.pb"));
+    Files.deleteIfExists(outDir.resolve("map.lock.json"));
   }
 
   private static final class HAProvider implements SnapshotProvider {
@@ -111,11 +127,17 @@ public final class DiscoverRunner {
     }
 
     @Override
-    public HASnapshot fetch() throws Exception {
-      var client = new HAHttpClient(HAConfig.of(url, token));
-      var states = client.fetchStates();
-      var services = client.fetchServices();
-      return new HASnapshot(states, services);
+    public List<Map<String, Object>> fetchStates() throws Exception {
+      try (var client = new HAHttpClient(HAConfig.of(url, token))) {
+        return client.fetchStates();
+      }
+    }
+
+    @Override
+    public List<Map<String, Object>> fetchServices() throws Exception {
+      try (var client = new HAHttpClient(HAConfig.of(url, token))) {
+        return client.fetchServices();
+      }
     }
 
     @Override
@@ -132,57 +154,35 @@ public final class DiscoverRunner {
     }
 
     @Override
-    public HASnapshot fetch() {
-      List<HAState> states = new ArrayList<>();
+    public List<Map<String, Object>> fetchStates() {
+      return List.of(
+          // Example climate entity as a map
+          Map.of(
+              "entity_id",
+              "climate.living_room_trv",
+              "attributes",
+              Map.of(
+                  "hvac_modes",
+                  List.of("off", "heat", "auto"),
+                  "min_temp",
+                  5.0,
+                  "max_temp",
+                  30.0,
+                  "temperature_unit",
+                  "°C")));
+    }
 
-      // climate
-      var aClimate = new LinkedHashMap<String, Object>();
-      aClimate.put("device_class", "heater");
-      aClimate.put("hvac_modes", List.of("off", "heat", "auto"));
-      aClimate.put("preset_modes", List.of("eco", "comfort"));
-      aClimate.put("min_temp", 5.0);
-      aClimate.put("max_temp", 30.0);
-      aClimate.put("target_temp_step", 0.5);
-      aClimate.put("temperature_unit", "°C");
-      states.add(new HAState("climate.living_room_trv", "heat", aClimate, null, null));
-
-      // light
-      var aLight = new LinkedHashMap<String, Object>();
-      aLight.put("supported_color_modes", List.of("hs", "color_temp"));
-      aLight.put("brightness", 180);
-      aLight.put("min_mireds", 153);
-      aLight.put("max_mireds", 500);
-      aLight.put("effect_list", List.of("rainbow", "night"));
-      states.add(new HAState("light.lamp", "on", aLight, null, null));
-
-      // fan
-      var aFan = new LinkedHashMap<String, Object>();
-      aFan.put("percentage", 33);
-      aFan.put("preset_modes", List.of("auto", "boost"));
-      aFan.put("direction", "forward");
-      aFan.put("oscillating", true);
-      states.add(new HAState("fan.tower", "on", aFan, null, null));
-
-      // cover
-      var aCover = new LinkedHashMap<String, Object>();
-      aCover.put("current_position", 42);
-      aCover.put("current_tilt_position", 10);
-      states.add(new HAState("cover.blind", "open", aCover, null, null));
-
-      // media_player
-      var aTv = new LinkedHashMap<String, Object>();
-      aTv.put("volume_level", 0.35);
-      aTv.put("source_list", List.of("TV", "HDMI1"));
-      aTv.put("sound_mode_list", List.of("stereo", "movie"));
-      states.add(new HAState("media_player.lg_tv", "on", aTv, null, null));
-
-      // Services (minimal example)
-      Map<String, HAServiceField> climateSetTemp =
-          Map.of("temperature", new HAServiceField(true, null, null, "Set temperature"));
-      List<HAService> services =
-          List.of(new HAService("climate", "set_temperature", climateSetTemp));
-
-      return new HASnapshot(states, services);
+    @Override
+    public List<Map<String, Object>> fetchServices() {
+      return List.of(
+          // Example service as a map
+          Map.of(
+              "domain",
+              "climate",
+              "services",
+              Map.of(
+                  "set_temperature",
+                  Map.of("fields", Map.of("temperature", Map.of("required", true))))));
     }
 
     @Override
